macOS undefined symbol _glapi_tls_Context build error
Undefined symbols for architecture x86_64:
"thread-local wrapper routine for _glapi_tls_Context", referenced from:
__mesa_BindAttribLocation_no_error in libmesa.a(main_shader_query.cpp.o)
__mesa_BindAttribLocation in libmesa.a(main_shader_query.cpp.o)
__mesa_GetActiveAttrib in libmesa.a(main_shader_query.cpp.o)
__mesa_program_resource_prop in libmesa.a(main_shader_query.cpp.o)
__mesa_GetAttribLocation in libmesa.a(main_shader_query.cpp.o)
__mesa_BindFragDataLocationIndexed in libmesa.a(main_shader_query.cpp.o)
__mesa_BindFragDataLocation_no_error in libmesa.a(main_shader_query.cpp.o)
...
ld: symbol(s) not found for architecture x86_64